--- a/index.html
+++ b/index.html
@@ -380,12 +380,12 @@
   </div>
 
   <!-- Maze Scripts -->
-  <script src="maze/globals.js"></script>
-  <script src="maze/utils.js"></script>
-  <script src="maze/entries.js"></script>
-  <script src="maze/maze.js"></script>
-  <script src="maze/solver.js"></script>
-  <script src="maze/app.js"></script>
+  <script src="maze-content/globals.js"></script>
+  <script src="maze-content/utils.js"></script>
+  <script src="maze-content/entries.js"></script>
+  <script src="maze-content/maze.js"></script>
+  <script src="maze-content/solver.js"></script>
+  <script src="maze-content/app.js"></script>
   <script src="main.js"></script>
 
 </body>
