saves time, ui changes

--- a/card-matching/index.html
+++ b/card-matching/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <!-- <header>
             <h1>Card Matching game</h1>
-        </header>
+        </header> -->
 
         <section class="score-table">
             <ul class="stars">
