--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
           <button id="memory-btn" onclick="launchGame('memory')" disabled>❓ ???</button>
         </div>
         <div class="game-item">
-          <button onclick="localStorage.clear(); location.reload();" class="reset-btn">🔄 Reset Progress</button>
+          <button onclick="localStorage.clear(); location.reload();" class="reset-btn">🔄 Reset</button>
         </div>
       </div>
 
